Fix breadcrumb wrapping

--- a/css/breadcrumb/index.css
+++ b/css/breadcrumb/index.css
@@ -29,6 +29,7 @@ Hide the first menu point on non-mobile devices:
 
 .breadcrumb {
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid var(--color-border);
@@ -40,6 +41,7 @@ Hide the first menu point on non-mobile devices:
 
 .breadcrumb > li {
   display: block;
+  white-space: nowrap;
 }
 
 .breadcrumb > li::before {
